Adding JavaDoc and cleanup (WIP)